--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "buildCommand": "cd frontend && npm install && npm run build",
   "outputDirectory": "frontend/dist",
   "routes": [
-    { "src": "^/.*", "dest": "/index.html" }
+    { "src": "/assets/.*", "dest": "/assets/$1" },
+    { "src": "/.*", "dest": "/index.html" }
   ]
 }
