--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,22 +8,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.35.0",
+    "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
+    "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.0",
-    "@tanstack/react-query": "^4.35.0",
-    "zustand": "^4.4.0",
-    "date-fns": "^2.30.0",
     "react-hook-form": "^7.45.0",
+    "react-router-dom": "^6.14.0",
     "zod": "^3.25.0",
-    "axios": "^1.4.0"
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "vite": "^4.5.0",
     "@vitejs/plugin-react": "^4.0.0",
-    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.0.0",
+    "vite": "^4.5.0"
   }
 }
